--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,4 +1,4 @@
-<form action="/artists" method="GET">
+<form class="mx-auto" action="/artists" method="GET">
   <div class="form-group">
     <label>Search for an Artist</label>
     <input type="text" class="form-control" placeholder="e.g. The Beatles" name="search">
