--- a/starter_code/views/layout.hbs
+++ b/starter_code/views/layout.hbs
@@ -11,7 +11,7 @@
 
         {{title}}
     </head>
-    <body>
+    <body class="container d-flex justify-content-center">
         {{{ body }}}
     </body>
 </html>
