--- a/starter_code/public/stylesheets/style.css
+++ b/starter_code/public/stylesheets/style.css
@@ -1,15 +1,18 @@
-.artists {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body,
 html {
+  box-sizing: border-box;
   height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+}
+
+.artists {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 body {
@@ -18,4 +21,15 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.search-bar {
+  margin: 0 auto;
+}
+
+.tracks {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
 }
