--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,3 +1,4 @@
+ <div class="search-bar">
  <form action="/artists" method="GET">
       <input
         type="text"
@@ -8,3 +9,4 @@
       <button type="reset">Reset</button>
       <button type="submit">Search</button>
  </form>
+ </div>
