--- a/starter_code/views/partials/albumpartial.hbs
+++ b/starter_code/views/partials/albumpartial.hbs
@@ -2,6 +2,6 @@
   <img src="{{this.images.0.url}}" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{this.name}}</h5>
-    <a href="/{{this.id}}" class="btn btn-primary">View Tracks</a>
+    <a href="/tracks/{{this.id}}" class="btn btn-primary">View Tracks</a>
   </div>
 </div>
