--- a/starter_code/views/partials/trackspartial.hbs
+++ b/starter_code/views/partials/trackspartial.hbs
@@ -4,7 +4,7 @@
     <figcaption>{{this.name}}</figcaption>
     <audio
         controls
-        src="/media/examples/t-rex-roar.mp3">
+        src="{{this.preview_url}}">
             Your browser does not support the
             <code>audio</code> element.
     </audio>
