--- a/starter_code/views/albums.hbs
+++ b/starter_code/views/albums.hbs
@@ -1,8 +1,3 @@
-<div class="container">
-    <div>
-        <img src="{{images.0.url}}" alt="">
-    </div>
-    <div class="card-body">
-        <h2>{{this.name}}</h2>
-    </div>
-</div>
+{{#each albums}}
+{{>albumPr}}
+{{/each}}
