--- a/starter_code/views/partials/artistPr.hbs
+++ b/starter_code/views/partials/artistPr.hbs
@@ -8,6 +8,6 @@
     <p>{{description}}</p>
     </div>
 
-   <a href="/albums/{{this.id}}">View Albums</a>
+   <a href="/albums/{{id}}">View Albums</a>
     </div>
 </div>
