--- a/starter_code/views/tracks.hbs
+++ b/starter_code/views/tracks.hbs
@@ -1,5 +1,9 @@
 {{#each dataTrack}}
 
 <h3>{{this.name}}</h3>
+<audio controls>
+  <source src="{{this.preview_url}}" type="audio/mp3"/>
+</audio>
+
 
 {{/each}}
