--- a/starter_code/views/partials/artistsPartial.hbs
+++ b/starter_code/views/partials/artistsPartial.hbs
@@ -3,6 +3,6 @@
     <img class="card-img-top w-25" src="{{images.0.url}}" alt="Card image">
     <div class="card-body">
       <h5 class="card-title">{{name}}</h5>
-      <a href="/{{id}}" class="btn btn-primary">View Albums</a>
+      <a href="/albums/{{id}}" class="btn btn-primary">View Albums</a>
     </div>
   </div>
