done, just missing some styles

--- a/starter_code/views/albums.hbs
+++ b/starter_code/views/albums.hbs
@@ -1,7 +1,7 @@
-<h1>I am the album Page</h1>
+{{!-- <h1>I am the album Page</h1> --}}
 
 {{#each albums}}
-{{this.title}}
-{{>albumP}}
+{{!-- {{this.title}} --}}
+{{> albumP}}
 
 {{/each}}
