--- a/starter_code/views/partials/albumP.hbs
+++ b/starter_code/views/partials/albumP.hbs
@@ -1,8 +1,3 @@
-<div class="card" style="width: 18rem;">
-  {{!-- <img src="{{images.0.url}}" class="card-img-top" alt="this band has no image"> --}}
-  <div class="card-body">
-    <h5 class="card-title">{{name}}</h5>
-    <p class="card-text">some text</p>
-    {{!-- <a href="albums/{{this.id}}" class="btn btn-primary">See Albums</a> --}}
-  </div>
-</div>
+<h3>{{name}}</h3>
+<img src="{{this.images.0.url}}" alt="">
+<a href="/tracks/{{this.id}}/">View Tracks</a>
