with some bootstrap

--- a/starter_code/views/albums.hbs
+++ b/starter_code/views/albums.hbs
@@ -1,8 +1,7 @@
-<div>
-    <p>Albums will go here</p>
+<div class="d-flex flex-wrap justify-content-center align-items-center artist_cards">
 
     {{#each albums}}
     {{>albums_partial}}
     {{/each}}
-    
+
 </div>
