--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,6 +1,6 @@
-<div>
-    <form action="/artist" method="GET">
-        <input type="text" name="artist_name" placeholder="Search for an artist!">
-        <button>Search for an artist</button>
+<div class="first_page d-flex justify-content-center align-items-center">
+    <form action="/artist" method="GET" class="d-flex flex-column justify-content-center align-items-center">
+        <input type="text" name="artist_name" placeholder="Search for an artist!" class="w-75 text-center" width="70">
+        <button class="btn btn-danger m-1">Search for an artist</button>
     </form>
 </div>
