--- a/starter_code/views/tracks.hbs
+++ b/starter_code/views/tracks.hbs
@@ -1,4 +1,7 @@
-<h1>here will be the tracks</h1>
+<div class="nav_bar_tracks">
+    <div class="m-5">Title</div>
+    <div class="m-5">Listen</div>
+</div>
 <div>
     {{#each tracks}}
     {{>tracks}}
