--- a/starter_code/views/partials/tracks.hbs
+++ b/starter_code/views/partials/tracks.hbs
@@ -1,5 +1,5 @@
-<div>
-    <p>Name: {{this.name}}</p>
+<div class="d-flex flex-row justify-content-between align-items-center bg-light m-1">
+    <p class="font-weight-bold">{{this.name}}</p>
     <audio controls>
         <source src={{this.preview_url}} />
     </audio>
