--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,12 +1,13 @@
+ <div class="home-container">
  <div class="search-bar">
- <form action="/artists" method="GET">
-      <input
+ <form action="/artists" method="GET" class="search-form">
+      <input class="form-bar"
         type="text"
         name="search_query"
         placeholder="Search for anything..."
       />
    {{!--    <input type="number" name="limit" placeholder="How many results?" /> --}}
-      <button type="reset">Reset</button>
-      <button type="submit">Search</button>
+      <button class="btn btn-danger search-button" type="submit">Search For an Artist</button>
  </form>
+ </div>
  </div>
