--- a/starter_code/views/partials/artistpartial.hbs
+++ b/starter_code/views/partials/artistpartial.hbs
@@ -1,7 +1,7 @@
-<div class="card" style="width: 18rem;">
-  <img src="{{this.images.0.url}}" class="card-img-top" alt="...">
+<div class="card col-3" style="width: 5rem">
+  <img src="{{this.images.0.url}}" class="img-thumbnail" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{this.name}}</h5>
-    <a href="/album/{{this.id}}" class="btn btn-primary">Album</a>
+    <a href="/album/{{this.id}}" class="btn btn-primary center">Album</a>
   </div>
 </div>
