--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="main-search">
         <form method="get" action="/artists">
-            <input type="text" name="search_query" placeholder="Search here">
-            <button class="btn">Submit</button>
+            <input type="text" name="search_query" autocomplete="off" placeholder="Search here">
+            <button class="btn">Search</button>
         </form>
     </div>
 </div>
