--- a/starter_code/views/partials/navbar.hbs
+++ b/starter_code/views/partials/navbar.hbs
@@ -1,7 +1,7 @@
 <div class="nav">
-    <a href="">Wh</a>
-    <a href="">at</a>
-    <a href="">ev</a>
-    <a href="">er</a>
+    <a href="/">Home</a>
+    <a href="https://open.spotify.com/artist/2oWYReGFzdcjvgUC5aizxv" target="new">not home</a>
+    <a href="https://open.spotify.com/artist/5Nx3gPpU2OFLI80rv7fDX5" target="new">even further from home</a>
+    <a href="https://open.spotify.com/artist/3Vl9fyKMIdLMswk8ai3mm9" target="new">now this what</a>
 
 </div>
