--- a/starter_code/views/albums.hbs
+++ b/starter_code/views/albums.hbs
@@ -1,9 +1,6 @@
-<h1>ALBUM PAGE</h1>
 
-<div class="albums-page">
-  
- {{#each albums}}
+<div class="artistbody">
+{{#each dataAlbum}}
 {{>albumsp}}
 {{/each}}
-</div>
-
+</div> 
