--- a/starter_code/views/partials/artistsp.hbs
+++ b/starter_code/views/partials/artistsp.hbs
@@ -1,3 +1,4 @@
 <h3>{{name}}</h3>
 <img src="{{images.0.url}}">
-<a class="buttons" href="/albums?search_query={{this.id}}">view album</a>
+<a class="buttons" href="/album/{{id}}">view album</a>
+
