changes made to landind page

--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,4 +1,6 @@
-<form action="/artist" method="GET">
-    <input type="text" name="search_query" id="search_query" placeholder="What are you looking for">
-    <input type="submit" value="Search">
+<div class="search-container">
+    <form action="/artist" method="GET">
+    <input type="text" name="search_query" id="search_query" placeholder="Search artist" class="input-area">
+    <input type="submit" value="Search" class="submit-button">
 </form>
+</div>
