--- a/starter_code/views/partials/albumPr.hbs
+++ b/starter_code/views/partials/albumPr.hbs
@@ -1,3 +1,5 @@
-<img src="{{images.0.url}}"> 
-<h2>{{name}}</h2>
-<a href="/tracks/{{id}}">View Tracks</a>
+<div class="album-container">
+    <img src="{{images.0.url}}" class="album-image">
+    <h2 class="album-name">{{name}}</h2>
+    <a href="/tracks/{{id}}" class="album-link">View Tracks</a>
+</div>
