--- a/starter_code/views/partials/artistPr.hbs
+++ b/starter_code/views/partials/artistPr.hbs
@@ -1,13 +1,7 @@
-<div class="container">
-    <div class="card">
-         <div class="card-image-top">
-     <img src="{{images.0.url}}"> 
- </div>
-    <div class="card-body">
+<div class="artistPartials">
+    <img src="{{images.0.url}}" class="partials-image">
+    <div class="artist-text">
         <h2>{{name}}</h2>
-    <p>{{description}}</p>
-    </div>
-
-   <a href="/albums/{{id}}">View Albums</a>
+        <a href="/albums/{{id}}" class="view-tracks-button">View Albums</a>
     </div>
 </div>
