--- a/starter_code/views/partials/trackPr.hbs
+++ b/starter_code/views/partials/trackPr.hbs
@@ -1,4 +1,6 @@
-<h1>{{name}}</h1>
-<audio controls>
-  <source src="{{preview_url}}" type="audio/mp3">
-</audio>
+<div class="songs-container">
+  <h1 class="song-name">{{name}}</h1>
+  <audio controls class="song-controls">
+    <source src="{{preview_url}}" type="audio/mp3">
+  </audio>
+</div>
