--- a/starter_code/views/artists.hbs
+++ b/starter_code/views/artists.hbs
@@ -1,10 +1,12 @@
 <div class="artists">
   <div class="artist">
     {{#each artists}}
-    <img src="{{ this.images.0.url }}"/>
-    <div class="artist-container">
-      <h2>{{ this.name }}</h2>
-      <a href="/albums/{{this.id}}">View Albums</a>
+    <div class="artist-cards">
+      <img src="{{ this.images.0.url }}"/>
+      <div class="artist-container">
+        <h2>{{ this.name }}</h2>
+        <a href="/albums/{{this.id}}">View Albums</a>
+      </div>
     </div>
     {{/each}}
   </div>
