--- a/starter_code/public/css/main.css
+++ b/starter_code/public/css/main.css
@@ -55,7 +55,7 @@ body {
   width: 100%;
 }
 
-.artist h2 {
+.artist p {
   color: #fff;
   font-size: 18px;
   margin: 2px;
@@ -83,16 +83,25 @@ body {
 
 /*tracks*/
 .tracks {
-  padding: 10px 20%;
+  padding: 0 20%;
 }
-.header-row {
-  display: flex;
-  flex-direction: row;
+.header-track {
   background-color: #4a4a4a;
-  padding: 20px 10px;
+  padding: 0 325px 0 20px;
   color: #f6f6f6;
   font-size: 20px;
 }
 
+.row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.track-container {
+  padding: 10px 60px 10px 20px;
+  background-color: #f6f6f6;
+}
+
 .track-item {
+  margin-bottom: 2px;
 }
