--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,15 +8,6 @@
       flex-direction: column;
       width: 100%;
 
-        {
-          {
-           !-- background-image: url("./images/spotify-background.jpeg");
-          --
-        }
-      }
-
-      background-size: cover;
-
     }
 
     body {
@@ -25,10 +16,15 @@
       width: 100%;
       margin: 0 auto;
       text-align: center;
+      background-image: url("./images/spotify-background.jpeg");
+      background-size: cover;
+      align-items: center;
+      justify-items: center;
     }
 
 
     .search-form {
+      margin-left: auto;
       display: flex;
 
     }
