--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -1,8 +1,8 @@
-  
-<h1>Search results go here</h1>
+  <div class="result-container">
+<h1>Results for {{ name }}</h1>
+  {{#each artistInfo}}
 
 <ul class="search-results">
-  {{#each artistInfo}}
     <li class="search-result">
   {{ name }}  
   {{#each images }}
@@ -13,5 +13,7 @@
   <button><a href="/albums/{{ id }}">View Albuns</a></button>
         </div>
     </li>
-  {{/each}}
 </ul>
+
+</div>
+  {{/each}}
