--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,13 @@
-<form class="form-inline" action="/artist-search" method="GET">
-  <div class="form-group mx-sm-3 mb-2">
-    <label for="inputArtist" class="sr-only">Search for an Artist</label>
-    <input type="text" name="term" class="form-control" id="inputArtist" placeholder="Search for an Artist">
+<section class="home">
+  <div class="borderForm">
+    <form class="form-group rounded-0" action="/artist-search" method="GET">
+        <input type="text" name="term" class="form-control form-control rounded-0" id="inputArtist" placeholder="Search for an artist!">
+        <button type="submit" class="btn mb-2 rounded-0">Search for an Artist</button>
+    </form>
   </div>
-  <button type="submit" class="btn btn-primary mb-2">Search for an Artist</button>
-</form>
+  
+</section>
+
+
+
+
