--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -3,7 +3,7 @@
 {{#each data}}
   <div class="artist_info">
     <img src="{{images.0.url}}" id="album_image">
-    {{name}}
+    <p>{{name}}</p>
     <a href="/albums/{{id}}">View Albums</a>
   </div>
 {{/each}}
