--- a/views/tracks.hbs
+++ b/views/tracks.hbs
@@ -1,5 +1,5 @@
 <h1>Tracks</h1>
-
+<div class="tracks">
 {{#each data}}
 {{name}}
 <audio controls>
@@ -7,3 +7,4 @@
 </audio>
 <br>
 {{/each}}
+</div>
