--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -3,7 +3,7 @@
 {{#each data}}
   <div class="artist_info">
   <img src="{{images.0.url}}" id="album_image">
-  {{name}}
+  <p>{{name}}</p>
   <a href="/tracks/{{id}}">View Tracks</a>
   </div>
 {{/each}}
