--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,8 @@
-<form action="/search-artist" method="GET">
-    <input type="text" name="artist">
-    <button>Search</button>
+<form action="/search-artist" method="GET" class="p-5 bg-dark w-50 container">
+    <div class="p-2 col d-flex justify-content-center">
+        <input type="text" name="artist">
+    </div>
+    <div class="p-2 col d-flex justify-content-center">
+        <button type="button" class="btn btn-secondary">Search for an artist</button>
+    </div>
 </form>
