with full css - no bootstrap

--- a/views/artist-search-results.hbs
+++ b/views/artist-search-results.hbs
@@ -10,7 +10,7 @@
 <img src="{{url}}">
 {{/if}}
 {{/each}}
-<a class ="button" href="/albums/{{id}} type="submit"">
+<a class ="button" href="/albums/{{id}}" type="submit">
 View Albums
 </a>
 </li>
