--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,13 @@
 <div class="background">
-  
+<div class="miniBox">
+<h1>Welcome to MusicFind</h1>
 <a class="form">
 <form name="myForm" action="/artist-search" method="GET">
 <input class="box"type="text" name="artist"><br>
-<input class ="button" type="submit" value="Search for an Artist">
+<input class ="interfaceButton" type="submit" value="Search for an Artist">
 </form>
 </a>
+</div>
 </div>
 
 
