--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -1,10 +1,13 @@
+<ul class="cards">
 {{#each al}}
+<li class="card">
 {{name}}
 {{#each images}}
 {{#if @first}}
 <img src="{{url}}">
 {{/if}}
 {{/each}}
-<a href="/albums/tracks/{{id}}">
-<button  type="submit">View Tracks</button>
+<a class ="button" href="/albums/tracks/{{id}}"type="submit">View Tracks</a>
+</li>
 {{/each}}
+</ul>
