--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -42,6 +42,8 @@ body {
 }
 
 .artist-card {
+  display: flex;
+  flex-direction: column;
   width: 300px;
   height: 350px;
   background-color: darkslategray;
@@ -50,6 +52,7 @@ body {
   border-radius: 5px;
   text-align: center;
   color: antiquewhite;
+  margin-top: 20px;
 }
 
 .artist-card img {
