Home quase pronta

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,6 @@
+{{> intro}}
+
+
 <section class="home">
   <div class="borderForm">
     <form class="form-group rounded-0" action="/artist-search" method="GET">
