--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,14 +2,21 @@
   box-sizing: border-box;
 }
 
-body{
+body {
+  font-family: Helvetica,Arial,sans-serif;
+  background-color: black;
   overflow-x: hidden;
+  background: url('/images/capa.png'),
+              url('/images/ruido.png'),
+              linear-gradient(50deg,#ff4169,#7c26f8);
+background-attachment: fixed;
 }
 
 /* -- Barra de Navegação  -- */
-nav.navbar-transparente {
+.navbar-transparente {
+  
 	padding: 15px 0px;
-	background: rgba(0,0,0,0.6);
+	background-color: rgba(0,0,0,0.6);
 	border: none;
 }
 
@@ -34,7 +41,8 @@ nav.navbar-transparente {
 }
 
 .nav-link, footer .nav a{
-  color: red;
+  color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
 .navbar-black a:hover, footer .nav a:hover {
@@ -44,15 +52,74 @@ nav.navbar-transparente {
 
 
 /*HOME*/
+
+.capa {
+  display: table;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 10% 0;
+
+}
+
+.texto-capa {
+	text-align: center;
+  color:white;
+  font-family: inherit;
+  font-size: large;
+	display: table-cell;
+  vertical-align: middle;
+  margin:0 auto;
+}
+
+.texto-capa h1{
+  font-size: 7em;
+  font-weight: 700;
+}
+
+/* -- Botoes  -- */
+.texto-capa a{
+  margin: 1em 2em;
+}
+
+.btn-custom{
+	color: white;
+	border-radius: 500px;
+	-webkit-border-radius: 500px;
+	-moz-border-radius: 500px;
+  /*text-transform: uppercase;*/
+  text-align: center;
+  transition: background 0.4s,color 0.4s;
+  padding: 0.5em 4.5em;
+}
+
+.btn-roxo{
+	background-color: #7c25f8;
+
+}
+
+.btn-roxo:hover{
+	background-color: #6207e3;
+	color:white;
+}
+
+.btn-branco{
+	border: 2px solid white;
+
+}
+
+.btn-branco:hover{
+	background-color: white;
+	color:black;
+}
+
 .home{
   width: 100%;
-  height: 41em;
-  background-image: url('/images/spotify-background.jpeg');
-  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .borderForm{
   margin: auto 0;
   background-color: rgba(255,255,255,0.5);
@@ -68,21 +135,6 @@ nav.navbar-transparente {
   margin: 5em auto;
 }
 
-
-.btn{
-  background-color: #ff6666;
-  color:white
-}
-
-.btn:hover{
-  color: #ff6666;
-  background-color: white;
-  border: 0.2em solid #ff6666;
-}
-
-form input{
-  margin-bottom: 1em;
-}
 
 /*IMG ARTIST*/
 .imgArtist{
