--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark navbar-transparente navbar-black">
+<nav class="navbar navbar-expand-lg navbar-transparente navbar-black">
   <div class="container">
 
     <div class="navbar-brand">
